--- a/inner.html
+++ b/inner.html
@@ -12,41 +12,45 @@
 
 <body>
     <header>
-        <div>
-            <div class="header-1">
-                <a href="inner.html" class="logo-inner"><img src="img/logo-technomart.png"></a>
-                <div class="search">
-                    <form>
-                        <input type="text" placeholder="Поиск:">
-                    </form>
+        <div class="header-mine">
+            <div class="header-container ">
+                <div class="header-0">
+                    <div class="header-1">
+                        <a href="inner.html" class="logo-inner"><img src="img/logo-technomart.png"></a>
+                        <div class="search">
+                            <form>
+                                <input type="text" placeholder="Поиск:">
+                            </form>
+                        </div>
+                        <a href="#" class="marker-inner">Закладки:0</a>
+                        <a href="#" class="basket-inner">Корзина:0</a>
+                        <a href="#" class="order-inner">Оформить заказ</a>
+                    </div>
                 </div>
-                <a href="#" class="marker-inner">Закладки:0</a>
-                <a href="#" class="basket-inner">Корзина:0</a>
-                <a href="#" class="order-inner">Оформить заказ</a>
-            </div>
-            <div class="inner-contact">
-                <div class="inner-contact-block">
-                    <ul class="inner-contact-check">
-                        <li class="inner-definition">Интернет-магазин строительных материалов и инструментов для
-                            ремонта
-                        </li>
-                        <li class="inner-position"><span>+7 (812) 555-05-55</span><span>г. Санкт-Петербург, ул. Б.
-                                Конюшенная, д. 19/8</span></li>
+                <div class="inner-contact">
+                    <div class="inner-contact-block">
+                        <ul class="inner-contact-check">
+                            <li class="inner-definition">Интернет-магазин строительных материалов и инструментов для
+                                ремонта
+                            </li>
+                            <li class="inner-position"><span>+7 (812) 555-05-55</span><span>г. Санкт-Петербург, ул. Б.
+                                    Конюшенная, д. 19/8</span></li>
 
-                        <input class="inner-input submit" type="submit" value="Войти">
-                        <input class="inner-check-in submit" type="submit" value="Регистрация">
-                    </ul>
-                    <nav class="nav-inner">
-                        <ul class="main-menu">
-                            <li><a href="#">Главная</a></li>
-                            <li><a href="#">Компания</a></li>
-                            <li><a href="catalog.html">Каталог</a></li>
-                            <li><a href="#">Новости</a></li>
-                            <li><a href="#">Спецпредложения</a></li>
-                            <li><a href="#">Доставка</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <input class="inner-input submit" type="submit" value="Войти">
+                            <input class="inner-check-in submit" type="submit" value="Регистрация">
                         </ul>
-                    </nav>
+                        <nav class="nav-inner">
+                            <ul class="main-menu">
+                                <li><a href="#">Главная</a></li>
+                                <li><a href="#">Компания</a></li>
+                                <li><a href="catalog.html">Каталог</a></li>
+                                <li><a href="#">Новости</a></li>
+                                <li><a href="#">Спецпредложения</a></li>
+                                <li><a href="#">Доставка</a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
