--- a/inner.html
+++ b/inner.html
@@ -265,13 +265,13 @@
                 </div>
                 <ul class="social-network">
                     <li>
-                        <a href="#"></a>
+                        <a class="social_vk" href="#"></a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a class="social_fb" href="#"></a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a class="social_insta" href="#"></a>
                     </li>
                 </ul>
                 <div class="feedback">
